--- a/demo/src/main/resources/templates/specialties.html
+++ b/demo/src/main/resources/templates/specialties.html
@@ -1,3 +1,4 @@
+<!-- Especialidades.html dentro de la landing page-->
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -17,20 +18,20 @@
 
     <!-- Navigation -->
     <nav class="navbar">
-      <div class="nav-container">
-        <div class="nav-left">
+      <section class="nav-container">
+        <article class="nav-left">
           <img src="/assets/images/logo_shiba.png" alt="Logo" class="logo" />
           <span class="brand-name">Clínica<br />Shiba</span>
-        </div>
+        </article>
 
-        <div class="nav-center">
+        <article class="nav-center">
           <a href="/" class="nav-link">Inicio</a>
           <a href="#" class="nav-link active">Especialidades</a>
           <a href="#" class="nav-link">Blog</a>
           <a href="/#cta" class="nav-link">Contacto</a>
-        </div>
+        </article>
 
-        <div class="nav-right">
+        <article class="nav-right">
           <div class="search-container">
             <input type="text" placeholder="Busca..." class="search-input" />
             <img
@@ -52,8 +53,8 @@
               <a href="/login" class="login-btn">Iniciar sesión</a>
             </div>
           </div>
-        </div>
-      </div>
+        </article>
+      </section>
     </nav>
 
     <!-- Hero Section -->
